fixed overflow hidden in swiper container

--- a/src/scss/components/swiper-gallery.scss
+++ b/src/scss/components/swiper-gallery.scss
@@ -6,6 +6,7 @@
   justify-items: flex-start;
   z-index: 100;
   margin-left: 0 !important;
+  overflow:hidden;
   // padding: 5rem 0;
 
   &--full {
